Ported remaining test code to Java 11